YA upgrade to the db upgrade script